[package]
name = "climb-service"
version = "0.1.0"
description = "This is a service for climbing, red panda is very cute"
authors = ["chris"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
